ui/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "totoro";
    src: url("./assets/fonts/spumoni-regular.ttf");
    font-weight: 400;
}

@font-face{
    font-family:"montserrat";
    src: url("./assets//fonts/montserrat-regular.ttf");
    font-weight:400;
}
@font-face{
    font-family:"montserrat";
    src: url("./assets//fonts/montserrat-bold.ttf");
    font-weight:700;
}


*{
    font-family: "montserrat";
}

.custom-scrollbar{
    scrollbar-width: thin;
    scrollbar-color:grey;
}

p{
    @apply text-xs md:text-sm
}

.modal-title{
    font-weight: bold;
    font-size:medium
}

.icon{
    @apply min-w-4 h-4 md:min-w-6 md:h-6;
}

.text-input{
    @apply border border-black p-[5px] rounded;
}

.required::after{
    content:' *';
    color:tomato;
}

.custom-breakpoint-container{
    @apply px-[20px] md:px-[32px] max-w-[1300px] mx-auto
}

/*Styles for game tile text rotations*/
.tile-top{
    flex-direction: column;
    border-radius: 4px;
    width:100%
}
.tile-top p:first-child{
    @apply px-[3px] md:px-[5px]
}
.tile-top > span{
    min-height:20%;
    width:100%;
    @apply rounded-b-sm;
}
.tile-right{
    scale:-1;
    width:100%;
}
.tile-right img{
    transform:rotate(90deg)
}
.tile-right p{
    writing-mode: vertical-rl;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1; /* number of characters/lines vertically */
    overflow: hidden;
}

@media (min-width:1024px) {
    .tile-right p,
    .tile-left p{
        display:flex;
        justify-content: center;
    }
}

.tile-right p:first-child{
    @apply py-[3px] md:py-[5px]
}
.tile-right > span{
    min-width:20%;
    height:100%;
    @apply rounded-r-sm
}
.tile-bottom{
    flex-direction: column-reverse;
}
.tile-bottom > span{
    min-height:20%;
    width:100%;
    @apply rounded-t-sm
}
.tile-bottom p:first-child{
    @apply px-[3px] md:px-[5px];
}
.tile-left > span{
    min-width:20%;
    height:100%;
    @apply rounded-r-sm;
}
.tile-left p:first-child{
    @apply py-[3px] md:py-[5px]
}
.tile-left p{
    writing-mode: vertical-rl;
}

/*Dice rolling styles*/
.die{
    position: relative;
    width: 100px;
    height: 100px;
    transform-style: preserve-3d;
    transition: transform 1s; 
  }
.side {
    position: absolute;
    background-color: #ffF;
    border-radius:5px;
    width: 100px;
    height: 100px;
    border: 1px solid #e5e5e5;
    text-align: center;
    line-height: 2em;
}
.side:nth-child(1) {
    transform: translateZ(3em); /* Front face */
}
.side:nth-child(6) {
    transform: rotateY(90deg) translateZ(3em); /* Right face */
}
.side:nth-child(3) {
    transform: rotateY(-90deg) translateZ(3em); /* Left face */
}
.side:nth-child(4) {
    transform: rotateX(90deg) translateZ(3em); /* Top face */
}
.side:nth-child(5) {
    transform: rotateX(-90deg) translateZ(3em); /* Bottom face */
}
.side:nth-child(2) {
    transform: rotateY(180deg) translateZ(3em); /* Back face */
}
.show-1 {
    transform: rotateY(0deg);
}
.show-6 {
    transform: rotateY(-90deg);
}
.show-3 {
    transform: rotateY(90deg);
}
.show-4 {
    transform: rotateX(-90deg);
}
.show-5 {
    transform: rotateX(90deg);
}
.show-2 {
    transform: rotateY(180deg);
}

dialog{
    transition: opacity 0.3s ease, scale 0.3s ease;
}

.btn-secondary{
    @apply underline w-fit;
}

